// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaymentPage /> Renders correctly in various states should render errors 1`] = `
<div
  className="page__payment container-fluid py-5"
>
  <h1>
    Payment
  </h1>
  <div>
    Error: Something went really wrong.
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render its default state 1`] = `
<div
  className="page__payment container-fluid py-5"
>
  <h1>
    Payment
  </h1>
  <div
    className="row"
  >
    <div
      className="col-6"
    >
      <p>
        Your basket is empty.
      </p>
    </div>
    <div
      className="col-6"
    />
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render its loading state 1`] = `
<div
  className="page__payment container-fluid py-5"
>
  <h1>
    Payment
  </h1>
  <div>
    <div
      className="d-flex justify-content-center align-items-center flex-column"
      style={
        Object {
          "height": "50vh",
        }
      }
    >
      <div
        className="spinner-border text-primary"
        role="status"
      >
        <span
          className="sr-only"
        >
          Loading basket...
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render the basket 1`] = `
<div
  className="page__payment container-fluid py-5"
>
  <h1>
    Payment
  </h1>
  <div
    className="row"
  >
    <div
      className="col-6"
    >
      <ul>
        <li>
          paymentProviders: 
          [{"type":"cybersource"},{"type":"paypal"}]
        </li>
        <li>
          sdnCheck: 
          true
        </li>
        <li>
          products: 
          [{"imgUrl":"https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg","name":"Introduction to Happiness","seatType":"verified-certificate"}]
        </li>
      </ul>
      <div
        aria-labelledby="summary-heading"
        aria-live="polite"
        className="basket-section"
        role="region"
      >
        <h2
          className="h6"
          id="summary-heading"
        >
          <span>
            Summary
          </span>
        </h2>
        <table
          className="w-100"
        >
          <tbody>
            <tr>
              <th
                className="font-weight-normal"
                scope="row"
              >
                <span>
                  Price
                </span>
              </th>
              <td
                className="text-right"
              >
                <span>
                  $161.00
                </span>
              </td>
            </tr>
            <tr>
              <th
                className="font-weight-normal"
                scope="row"
              >
                <span>
                  Discounts applied
                </span>
              </th>
              <td
                className="text-right"
              >
                <span>
                  -$12.00
                </span>
              </td>
            </tr>
          </tbody>
        </table>
        <form
          onSubmit={[Function]}
        >
          <div
            className="form-group"
          >
            <label
              className="h6 d-block"
              htmlFor="couponField"
            >
              Add coupon code (optional)
            </label>
            <input
              aria-describedby=""
              className="form-control mb-2"
              id="couponField"
              name="couponField"
              onChange={[Function]}
              type="text"
              value=""
            />
            <button
              className="btn btn-primary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              type="submit"
            >
              Apply
            </button>
          </div>
        </form>
        <table
          className="w-100"
        >
          <tbody>
            <tr
              className="font-weight-bold"
            >
              <th
                scope="row"
              >
                <span>
                  TOTAL
                </span>
              </th>
              <td
                className="text-right"
              >
                <span>
                  $149.00
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="basket-section"
      >
        <h2
          className="h6"
        >
          <span>
            Order Details
          </span>
        </h2>
        <p>
          After you complete your order you will be automatically enrolled in the verified track of the course.
        </p>
      </div>
    </div>
    <div
      className="col-6"
    />
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should successfully render a basket with no order totals 1`] = `
<div
  className="page__payment container-fluid py-5"
>
  <h1>
    Payment
  </h1>
  <div
    className="row"
  >
    <div
      className="col-6"
    >
      <ul>
        <li>
          paymentProviders: 
          [{"type":"cybersource"},{"type":"paypal"}]
        </li>
        <li>
          sdnCheck: 
          true
        </li>
        <li>
          products: 
          [{"imgUrl":"https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg","name":"Introduction to Happiness","seatType":"verified-certificate"}]
        </li>
      </ul>
      <div
        aria-labelledby="summary-heading"
        aria-live="polite"
        className="basket-section"
        role="region"
      >
        <h2
          className="h6"
          id="summary-heading"
        >
          <span>
            Summary
          </span>
        </h2>
        <table
          className="w-100"
        >
          <tbody>
            <tr>
              <th
                className="font-weight-normal"
                scope="row"
              >
                <span>
                  Price
                </span>
              </th>
              <td
                className="text-right"
              />
            </tr>
          </tbody>
        </table>
        <table
          className="w-100"
        >
          <tbody>
            <tr
              className="font-weight-bold"
            >
              <th
                scope="row"
              >
                <span>
                  TOTAL
                </span>
              </th>
              <td
                className="text-right"
              />
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="basket-section"
      >
        <h2
          className="h6"
        >
          <span>
            Order Details
          </span>
        </h2>
        <p>
          After you complete your order you will be automatically enrolled in the verified track of the course.
        </p>
      </div>
    </div>
    <div
      className="col-6"
    />
  </div>
</div>
`;
